force-app/main/default/objects/custom_create68__c/custom_create68__c.object-meta.xml
<CustomObject>
    <label>Custom created object68</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects68</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>