force-app/main/default/objects/custom_create68__c/fields/custom_create_68field529__c.field-meta.xml
<CustomField>
    <fullName>custom_create_68field529__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 68field529</label>
    <type>Checkbox</type>
</CustomField>